# cmake-robot

./: .gitmodules  CMakeLists.txt  Dockerfile
src/: robot.cpp
